--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">27/02/2023, Optional type checking</h1>
+            <ul class="list-inside list-disc">
+                <li>Optional type checking</li>
+                <li>Gleam community, Codec</li>
+                <li>Web Worker</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/802771193?h=8331d682dd&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="27/02/2023, Optional type checking"></iframe></div>
             <h1 class="text-xl font-bold py-2">13/02/2023, Datalog notebook</h1>
             <ul class="list-inside list-disc">
                 <li>Datalog</li>
