--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">22/03/2023, multiline match statements</h1>
+            <ul class="list-inside list-disc">
+                <li>Structural editor</li>
+                <li>multiline match statements</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/810651250?h=47629cbc28&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="22/03/2023, multiline match statements"></iframe></div>
             <h1 class="text-xl font-bold py-2">13/03/2023, Async & Await Effects</h1>
             <ul class="list-inside list-disc">
                 <li>Async Await Effects</li>
