--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,11 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">05/06/2023, Features of the structured editor</h1>
+            <ul class="list-inside list-disc">
+                <li>Editor actions</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/833330371?h=9aeaa64b46&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="05/06/2023, Features of the structured editor"></iframe></div>
             <h1 class="text-xl font-bold py-2">22/05/2023, Introducing Eyg</h1>
             <ul class="list-inside list-disc">
                 <li>Embeddable editor</li>
