--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>31/07/2023, Datalog query over total program AST</h1>
+            <ul class="list-inside list-disc">
+                <li>AST search</li>
+                <li>Datalog</li>
+                <li>CozoDB</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/850311338?h=ac51733b74&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="31/07/2023, Datalog query over total program AST"></iframe></div>
             <h1 class="text-xl font-bold py-2">25/07/2023, Explaining EYG a portable language with no syntax</h1>
             <ul class="list-inside list-disc">
                 <li>Functional programming</li>
