--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>02/10/2023, lisp shell with CozoDB</h1>
+            <ul class="list-inside list-disc">
+                <li>Lisp shell</li>
+                <li>Cozo Effect</li>
+                <li>Table rendering</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/870407524?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02/10/2023, lisp shell with CozoDB"></iframe></div>
             <h1>11/09/2023, build and deploy as continuations</h1>
             <ul class="list-inside list-disc">
                 <li>client server</li>
