--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,14 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+
+            <h1>16/10/2023, Algebraic effects and handlers on an Arduino board</h1>
+            <ul class="list-inside list-disc">
+                <li>Effect handlers</li>
+                <li>tinygo</li>
+                <li>embedded (Arduino)</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/874870905?badge=0&amp;autopause=0&amp;quality_selector=1&amp;progress_bar=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="16/10/2023, Algebraic effects and handlers on an Arduino board"></iframe></div>
             <h1>02/10/2023, lisp shell with CozoDB</h1>
             <ul class="list-inside list-disc">
                 <li>Lisp shell</li>
