--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>19/12/2023, Datalog notebook</h1>
+            <ul class="list-inside list-disc">
+                <li>Datalog</li>
+                <li>Notebook</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/896297672?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="19/12/2023, Datalog notebook"></iframe></div>
             <h1>27/11/2023, Native inference and guide</h1>
             <ul class="list-inside list-disc">
                 <li>Effect types</li>
