--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,12 +25,31 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>22/01/2024, CEK interpreter rewrite</h1>
+            <ul class="list-inside list-disc">
+                <li>Gleam</li>
+                <li>CEK interpreter</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/905289860?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="22/01/2024, CEK interpreter rewrite"></iframe></div>
+            <h1>15/01/2024, Personal help page</h1>
+            <ul class="list-inside list-disc">
+                <li>Gleam</li>
+                <li>Browser</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/903062217?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="15/01/2024, personal help page"></iframe></div>
             <h1>19/12/2023, Datalog notebook</h1>
             <ul class="list-inside list-disc">
                 <li>Datalog</li>
                 <li>Notebook</li>
             </ul>
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/896297672?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="19/12/2023, Datalog notebook"></iframe></div>
+            <h1>04/12/2023, Datalog/Relational Algebra/MicroKanren DSL in Gleam</h1>
+            <ul class="list-inside list-disc">
+                <li>MicroKanren</li>
+                <li>Relational Algebra</li>
+                <li>Logic programming</li>
+            </ul>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/891157943?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04/12/2023, Datalog/Relational Algebra/MicroKanren DSL in Gleam"></iframe></div>
             <h1>27/11/2023, Native inference and guide</h1>
             <ul class="list-inside list-disc">
                 <li>Effect types</li>
