--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>29/01/2024, Inventing on Principle for Gleam</h1>
+            <ul class="list-inside list-disc">
+                <li>Gleam</li>
+                <li>Inventing on Principle</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/907533908?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="29/01/2024, Inventing on Principle for Gleam"></iframe></div>
             <h1>22/01/2024, CEK interpreter rewrite</h1>
             <ul class="list-inside list-disc">
                 <li>Gleam</li>
